# savesentry

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  THIRD-PARTY-LICENSES.md  build-release.ps1  build-windows.ps1  build.rs  installer.iss  temp_stdout.txt
.cargo/: config.toml
.github/workflows/: release.yml  rust.yml
resources/: sgw.db
src/: main.rs
src/db/: database.rs
src/db/migrations/: V1__initial_schema.sql  V2__seed_game_templates.sql  V3__add_process_name.sql  V4__add_app_state.sql
src/models/: game_profile.rs  game_template.rs  mod.rs
src/ui/: actions.rs  app.rs  messages.rs  mod.rs  state.rs  view.rs
src/ui/actions/: mod.rs  monitoring.rs  templates.rs
src/ui/components/: backup_history.rs  config_panel.rs  messages.rs  mod.rs  profile_form.rs  profiles_list.rs  save_info.rs  tab_bar.rs  templates.rs
src/ui/pages/: mod.rs
src/ui/pages/main/: backup_history.rs  config_panel.rs  mod.rs  save_info.rs
src/ui/pages/settings/: mod.rs  panel.rs
src/ui/pages/templates/: manager.rs  mod.rs
src/ui/views/: mod.rs  profile_form.rs  profile_list.rs  template_selection.rs
src/watcher/: file_watcher.rs  mod.rs  process_monitor.rs  simple_watcher.rs  subscription.rs
