[package]
name = "SaveGameWatcher"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
anyhow = "1.0"
notify = "6.1"
rfd = "0.14"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
refinery = { version = "0.8", features = ["rusqlite"] }
regex = "1.10"

[build-dependencies]
refinery = { version = "0.8", features = ["rusqlite"] }

[profile.release]
opt-level = "s"        # Otimizar para tamanho (melhor que 'z' para performance)
lto = true             # Link Time Optimization
codegen-units = 1      # Melhor otimização cross-function
strip = true           # Remover símbolos de debug
panic = "abort"        # Reduzir código de unwinding
incremental = false    # Desabilitar compilação incremental (reduz overhead)
