[package]
name = "SaveSentry"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.33.3"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
anyhow = "1.0"
notify = "8.2"
rfd = "0.16"
zip = { version = "6.0", default-features = false, features = ["deflate"] }
refinery = { version = "0.9.0", features = ["rusqlite"] }
regex = "1.12.2"
sysinfo = { version = "0.30", default-features = false }

[build-dependencies]
refinery = { version = "0.9.0", features = ["rusqlite"] }

[profile.release-windows]
opt-level = "z"        # Otimizar para tamanho mínimo (reduz footprint)
lto = "fat"            # Link Time Optimization máximo
codegen-units = 1      # Melhor otimização cross-function
strip = true           # Remover símbolos de debug
panic = "abort"        # Reduzir código de unwinding
incremental = false    # Desabilitar compilação incremental
overflow-checks = false # Desabilitar checks de overflow em release
debug = false          # Sem informações de debug
debug-assertions = false # Desabilitar assertions de debug
rpath = false          # Não incluir rpath (não necessário para Windows)
inherits = "release"   # Herdar configurações base do perfil release
